hphp/hack/test/typecheck/lsb_nonstatic_disallowed.php.exp
File "lsb_nonstatic_disallowed.php", line 4, characters 5-9:
__LSB attribute may only be used on static properties (Naming[2094])
